# speed-quiz-game

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: answers.py  questions.py
backend/app/crud/: __init__.py  crud_answer.py
backend/app/db/: __init__.py
backend/app/models/: answer.py
backend/app/schemas/: __init__.py  answer.py
backend/migrations/: env.py
backend/migrations/versions/: 1bbe27eee12c_create_question_and_answer_tables.py  e891df5c417f_create_question_table.py  fae5a1f46b98_add_correct_column_for_answer.py
backend/quiz_game_api/: actions.py  db.py  main.py  models.py  schemas.py
backend/quiz_game_api/api/: api.py  deps.py
backend/quiz_game_api/api/endpoints/: answers.py  questions.py
backend/quiz_game_api/crud/: base.py  crud_question.py
backend/quiz_game_api/models/: __init__.py  answer.py  question.py
backend/quiz_game_api/schemas/: answer.py  question.py
backend/tests/: test_quiz_game_api.py
