[tool.poetry]
name = "quiz_game_api"
version = "0.1.0"
description = ""
authors = ["Yaroslav Dubinskyi <slavabilaz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.67.0"
uvicorn = "^0.14.0"
SQLAlchemy = "^1.4.22"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.7b0"
sqlalchemy-stubs = "^0.4"
flake8 = "^3.9.2"
autoflake = "^1.4"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
